# autora-theorist-toolkit

./: README.md  mkdocs.yml  pyproject.toml
docs/: Additional Example.ipynb  Basic Usage.ipynb  index.md  quickstart.md
src/autora/theorist/toolkit/: __init__.py  tree.py  utils.py
src/autora/theorist/toolkit/components/: __init__.py  nodes.py  primitives.py
src/autora/theorist/toolkit/methods/: __init__.py  fitting.py  metrics.py  regression.py  rules.py
src/autora/theorist/toolkit/models/: __init__.py  bayesian_machine_scientist.py  bayesian_symbolic_regression.py  hierarchical_bayesian_symbolic_regression.py  hierarchical_symbolic_regressor.py  hybrid_regression.py  memory.py  parallel_symbolic_regression.py  symbolic_regression.py  tree.py
tests/: test_toolkit.py  test_visual.py
