[project]
# UPDATE THIS BEFORE PUBLISHING
name = "autora-theorist-toolkit"
description = "Toolkit to build algorithms for model recovery"
authors = [{ name = "Joshua T. S. Hewson", email = "joshua_hewson@brown.edu" }]
dynamic = ["version"]

readme = "README.md"
license = { text = "MIT license" }
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "autora-core",
    "scikit-learn",
    "numpy",
    "scipy",
    "tqdm",
    "pandas",
    "sympy"
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/TheLemonPig/autora-theorist-toolkit"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
